2006-06-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* auctex.spec (Obsoletes): Remove preview-latex-common.

2006-06-06  Ralf Angeli  <angeli@caeruleus.net>

	* style/pdfsync.el (LaTeX-pdfsync-output-page): Initialize
	`sync-record' with a non-nil value.

	* doc/auctex.texi (Viewing): Fix reference to Commands node
	looking ugly in info output.  Slightly rearrange forward/inverse
	search section.  Document pdfsync support a bit more in detail.

2006-06-06  Reiner Steib  <Reiner.Steib@gmx.de>

	* RELEASE: Use "SUSE" instead of "SuSE".

	* auctex.spec (Release): Bump to 1.
	(%changelog): Add 11.83.

	* doc/changes.texi: Add @xref for pdfsync.

	* doc/auctex.texi (Viewing): Mention pdfsync.

	* doc/todo.texi (Wishlist): Add newline.  Mention pdfsync.

2006-06-06  David Kastrup  <dak@gnu.org>

	* RELEASE: Add details about downloadable packages.  Beg harder.

2006-06-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* RELEASE: Mention LaTeX tool bar.

2006-06-05  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-quote-regexp-beg)
	(font-latex-quotes-control): Make buffer-local.
	(font-latex-add-quotes): Revert last change and do not make
	`font-latex-quotes-control' buffer-local which it now already is.

2006-06-04  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-add-quotes): Make
	`font-latex-quote-regexp-beg' buffer-local.

2006-06-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* Makefile.in (rpm-builds): New target.
	(full-release): Use gpg-agent if available.
	(RPM_SIGN): New variable.
	(rpm-builds): Use it.

	* doc/install.texi (Advice for non-privileged users): Reword to
	avoid underfull hbox.

2006-06-03  Ralf Angeli  <angeli@caeruleus.net>

	* doc/auctex.texi (top): Update master menu.
	(Running TeX and friends): Update menu.
	(Miscellaneous Commands): Remove.
	(Cleaning, Documentation): New nodes.

	* doc/changes.texi: Update references to documentation about
	cleaning and documentation access.
