@@ -1,5 +1,9 @@
 2006-06-07  Reiner Steib  <Reiner.Steib@gmx.de>
 
+	* tex.el (TeX-line-number-at-pos): New compatibility function.
+
+	* style/pdfsync.el (LaTeX-pdfsync-output-page): Use it.
+
 	* auctex.spec (Obsoletes): Remove preview-latex-common.
 
 2006-06-06  Ralf Angeli  <angeli@caeruleus.net>
